fix: made topic stand out on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,7 @@
   --purple: #9b287b;
   --green: #417b5a;
   --magenta: #9e4770;
+  --teal: #087e8b;
 
   --background: linear-gradient(
     180deg,
@@ -76,6 +77,7 @@
   --color-purple: var(--purple);
   --color-green: var(--green);
   --color-magenta: var(--magenta);
+  --color-teal: var(--teal);
 
   --font-sans: var(--font-inter);
   --font-serif: var(--font-merriweather);
